<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, You are an amazing device.</string>
    <string name="app_name">Fuel Saving Device</string>
    <string name="FirstButton">Live Data</string>
    <string name="SecondButton">Optimized Route</string>
    <string name="ThirdButton">Route Comparison</string>
    <string name="FourthButton">Choose Route</string>
    <string name="FifthButton">Settings</string>
    <string name="Practice">Test</string>

</resources>