<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:baselineAligned="true"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="93dp"
        android:text="@string/Practice"
        android:textSize="12pt" />




    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:text="@string/SecondButton"
    	android:textSize="12pt" />



    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:text="@string/ThirdButton"
    	android:textSize="12pt" />



    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:text="@string/FourthButton"
   		android:textSize="12pt" />


    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:text="@string/FifthButton"
    	android:textSize="12pt" />

</LinearLayout>